fix body jump to top on mobile cart open readjust upload field

--- a/css/style.css
+++ b/css/style.css
@@ -1746,7 +1746,7 @@ where hide-default is used as dropdown-class */
     padding: 0; }
   .inputfile + label span {
     width: calc(100% - 48px);
-    padding: 13px;
+    padding: 10px 13px;
     height: 50px;
     display: inline-block;
     text-overflow: ellipsis;
@@ -2172,11 +2172,15 @@ where hide-default is used as dropdown-class */
   vertical-align: middle; }
 
 @media (min-width: 220px) and (max-width: 779px) {
-  .overlay-open {
+  html.overlay-open {
     overflow: hidden;
-    position: fixed;
-    width: 100%;
     height: 100%; } }
+
+@media (min-width: 220px) and (max-width: 779px) {
+  body.overlay-open {
+    min-height: 100%;
+    height: auto;
+    overflow: hidden; } }
 
 .cart__overlay {
   position: fixed;
