--- a/dev/scss/_modules/_m-forms.scss
+++ b/dev/scss/_modules/_m-forms.scss
@@ -244,7 +244,7 @@
     }
     & + label span {
         width: calc(100% - 48px);
-        padding: 13px;
+        padding: 10px 13px;
         height: 50px;
         display: inline-block;
         text-overflow: ellipsis;
